--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "homepage": "https://github.com/bmachlin/chronography#readme",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "chartist": "^0.11.4",
     "express": "^4.15.3",
     "jquery": "^3.4.0",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "underscore": "^1.9.1"
   }
 }
