--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chronography",
-  "version": "1.0.0",
-  "description": "Spotify powered artist visualization tool",
+  "version": "1.1.0",
+  "description": "Spotify-powered music data visualization tool",
   "main": "index.js",
   "engines": {
     "node": "latest"
@@ -21,11 +21,6 @@
   },
   "homepage": "https://github.com/bmachlin/chronography#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "chartist": "^0.11.4",
-    "express": "^4.15.3",
-    "jquery": "^3.4.0",
-    "popper.js": "^1.14.6",
-    "underscore": "^1.9.1"
+    "express": "^4.15.3"
   }
 }
